# medicalPredictor

./: BaseSIRResults.txt  Bitsprayer.cpp  Bitsprayer.h  CMakeLists.txt  CovidModeler.cpp  CovidModelerLogs.eps  CovidModellerResults.txt  DeathLog.txt  Epidemic.cpp  EvolAlgor.py  GnuScriptMeanFitnessOverTime  Graph.h  Graphcode.py  InfectedLog.txt  LifeLog.txt  Makefile  Metrics.cpp  Notes.txt  Plan.txt  README.md  ReportTemplate.txt  Run2.sh  a.out  bs_test.txt  code.py  variants.txt  workingSpace.py
Code/: Bitsprayer.cpp  Bitsprayer.h  CovidModel  CovidModeler.cpp  CovidModeler.h  CovidModellerOutput.txt  CovidModellerResults.txt  Graph.cpp  Graph.h  GraphGen.h  Makefile  MattGraphTest  Metrics.cpp  Run2.sh  SDA.h  SimulateEpis.py  graphsForMatt.cpp  visualizer.py
MP/: Evolver.cpp  Evolver.h  SDA.cpp  SDA.h
Other Code/: Epidemic.cpp  Epidemic.h  EvolAlgor.py  Graph.cpp  MichaelOld.cpp  Test.cpp
